--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@
 	--col-dark-desaturated-blue: hsl(236, 21%, 26%);
 	--col-dark-blue-1: hsl(235, 16%, 14%);
 	--col-dark-blue-2: hsl(234, 17%, 12%);
+	--col-bg: #201e29;
 }
 
 /* BACKGROUND AND MAIN BODY */
@@ -21,8 +22,7 @@ body {
 	height: 100vh;
 	width: 100vw;
 	background-position: center;
-	/* background-color: var(--col-dark-desaturated-blue); */
-	background-color: #201e29;
+	background-color: var(--col-bg);
 	font-family: 'Red Hat Text', sans-serif;
 	font-size: 14px;
 }
@@ -33,8 +33,9 @@ body {
 	background-image: url('../images/pattern-hills.svg');
 	background-repeat: no-repeat;
 	background-position: bottom center;
-	background-size: contain;
+	background-size: cover;
 	height: 200px;
+	max-height: 35%;
 	width: 100vw;
 }
 
@@ -108,4 +109,47 @@ footer {
 .fab:hover {
 	color: var(--col-soft-red);
 	cursor: pointer;
+}
+
+/* RESPONSIVE DESIGN */
+
+@media screen and (max-width: 800px) {
+	.timer {
+		margin: 0.5rem;
+	}
+
+	.time-card {
+		padding: 0.2em;
+		width: 120px;
+		font-size: 60px;
+	}
+
+	.container h1,
+	.timer p {
+		letter-spacing: 5px;
+		text-indent: 5px;
+	}
+
+	.bg {
+		width: 200vw;
+		/* left: 0; */
+	}
+}
+
+@media (max-width: 600px) {
+	.time-card {
+		font-size: 50px;
+		width: 86px;
+	}
+
+	h1 {
+		width: 400px;
+		text-align: center;
+	}
+
+	.container h1,
+	.timer p {
+		letter-spacing: 3px;
+		text-indent: 3px;
+	}
 }
